Closed Bug 1363483 Opened 8 years ago Closed 8 years ago

Table painting busted after Bug 929484

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: rowbot, Assigned: mtseng)

References

Details

(Keywords: regression)

Attachments

(3 files)

Attached image table_layout.JPG
STR: 1) Open a new tab. 2) Navigate to [1]. Observe broken painting. This occurs approximately 90% of the time for me. It seems to occur more frequently in a newly opened tab, so if it doesn't do it the first time, try closing the tab and opening a new one and repeating the STR. Refreshing the page, switching tabs, or resizing the window seems to fix the problem. Last good revision: 33df8c04309cf792b214c5c6c903a391048f5516 First bad revision: 2a15fd71cf351e12c1286139e53b42b4cc486141 Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=33df8c04309cf792b214c5c6c903a391048f5516&tochange=2a15fd71cf351e12c1286139e53b42b4cc486141 [1] https://bugs.php.net/search.php?limit=30&order_by=id&direction=DESC&cmd=display&status=Open&bug_type=All
[Tracking Requested - why for this release]:
Blocks: 929484
Flags: needinfo?(mtseng)
I'm going to handle this.
Assignee: nobody → mtseng
Flags: needinfo?(mtseng)
I can reproduce it in my local. But the occur rate is not very high. I only see 2 times in my local. I'll find more reliable way to reproduce this.
I can reproduce 100% now when I resize my firefox. I'll debug this.
Attached file test-table-resize.html
Reduced test case. Steps to reproduce: 1. Open the html. 2. Resize the window.
Comment on attachment 8866230 [details] Bug 1363483 - Add nsDisplayTableBackgroundColor to avoid display item collision when processing background color of table. https://reviewboard.mozilla.org/r/137860/#review141420
Attachment #8866230 - Flags: review?(matt.woodrow) → review+
Try looks good.
Pushed by mtseng@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/efdda23fd13d Add nsDisplayTableBackgroundColor to avoid display item collision when processing background color of table. r=mattwoodrow
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
I can confirm this is fixed with the 2017-05-12 nightly. Thanks!
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: