Bug 1363483 - Add nsDisplayTableBackgroundColor to avoid display item collision when processing background color of table. r=mattwoodrow

MozReview-Commit-ID: JlYqyRGvtq3

--HG--
extra : rebase_source : b3a0c19fb6b6e7e2bbab6e9dd87d100890c626eb